@@ -1,7 +1,7 @@
 <?
-// hook_execgwcustomcmd
+// hook_playsmsd
 // used by menu.php?inc=daemon to execute custom command
-function template_hook_execgwcustomcmd()
+function template_hook_playsmsd()
 {
     // nothing
 }
