@@ -1,4 +1,5 @@
 Version 0.9.5-svn - unknown
+- rename execgwcustomcmd() to playsmsd()
 - change label success to handled and fail to unhandled, status on incoming SMS (anton)
 - revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
 - fix allow \r and \n in SMS text, http://smstools3.kekekasvi.com/topic.php?id=328 (anton)
